# Operator-Workspace

./: AGENTS.md  MANIFEST.md  README.md  repo_manifest.json  repo_manifest.yaml
.github/workflows/: ci.yml
docs/: Lorenz_Attractor_Documentation.md  README.md  e6_properties.md  e7_properties.md  e8_properties.md  e_group_overview.md  e_groups_overview.md  e_series_matrix_forms.md  e_series_reference.md  e_series_toolkit.md  exceptional_lie_groups.md  higher_e_groups.md  matrix_theory_overview.md
docs/refs/: e_series.bib
e4d/: __init__.py  base.py
e4d/bundle/: __init__.py  fourvector.py
e4d/e1/: __init__.py  kernel.py
e4d/e2/: __init__.py  kernel.py
e4d/e3/: __init__.py  kernel.py
e4d/e4/: __init__.py  kernel.py
lie_algebra/: __init__.py  constants.py  invariants.py  lie_algebra.py  root_system_generator.py
projects/: E8_Differential_Model.py  README.md  constants.py  lie_algebra.py
projects/E8_Model/: README.md  (+2 more)
scripts/: README.md  e6_dataset_example.py  e8_calculator.py  generate_all_data.py  qa_pipeline.py  repo_integrator.py  repo_inventory.py
seamless-torus/: .gitignore  LICENSE  README.md  pyproject.toml
seamless-torus/examples/: cifar10_cnn.py
seamless-torus/seamless_torus/: __init__.py  circular_padding.py  ring_linear.py  utils.py
seamless-torus/tests/: test_padding.py  test_ring_linear.py
tests/: test_bch.py  test_calculator.py  test_e6_dataset_example.py  test_fourvector.py  test_generators.py  test_invariants.py  test_inventory.py  test_qa_pipeline.py  test_repo_integrator.py  test_root_system_generator.py  test_roundtrip.py
(+35 files in other folders)
